[arief] - refactor axios default url, adding toast message, adding progress bar

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -129,5 +129,6 @@
 }
 
 :root {
-  --toastify-icon-color-success: #324158;
+  --toastify-icon-color-success: #324158 !important;
+  --toastify-color-success: #324158;
 }
